src/test/deca/context/invalid/improvided/op_bin_cmp_exact.deca
{
  // Description:
  //  Test de la comparaison exact entre deux types booléens.
  // 
  // Résultats:
  //  Ligne : The comparaison operator cannot be done between two boolean.
  boolean z = true > false;
}
